--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "> 1%",
     "maintained node versions",
     "not dead"
-],
-"scripts": {
+  ],
+  "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
     "webpack:watch": "webpack --watch --config webpack.dev.js",
     "webpack:build": "webpack --config webpack.prod.js  --optimize-minimize"
-},
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -26,12 +26,13 @@
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.2",
     "node-sass": "^5.0.0",
-    "postcss-loader": "^4.1.0",
-    "sass": "^1.30.0",
-    "sass-loader": "^10.1.0",
+    "postcss": "^8.2.4",
+    "postcss-loader": "^4.2.0",
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^4.44.2",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
