--- a/package.json
+++ b/package.json
@@ -17,16 +17,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.12.7",
-    "autoprefixer": "^10.0.4",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "autoprefixer": "^10.2.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
-    "fibers": "^5.0.0",
     "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^1.3.2",
-    "node-sass": "^5.0.0",
-    "postcss": "^8.2.4",
+    "mini-css-extract-plugin": "^1.3.4",
     "postcss-loader": "^4.2.0",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
@@ -34,7 +31,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^4.2.2"
-  }
+  },
+  "dependencies": {}
 }
